--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -36,6 +36,7 @@
           <ul class="left hide-on-med-and-down">
             <li><a href="/search">Search</a></li>
             <li><a href="/gallery">Gallery</a></li>
+            <li><a href="/mars">Mars</a></li>
           </ul>
         </div>
       </nav>
@@ -85,6 +86,8 @@
       </div>
     </footer>
 
+
+    <script src="/js/app.js"></script>
     <!-- Materialize JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
@@ -100,6 +103,5 @@
         M.AutoInit();
       });      
     </script>
-    <!-- <script src="/public/js/app.js"></script> -->
   </body>
 </html>
