--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -1,4 +1,5 @@
-<span class="left">Welcome, <%= userName %></span>
+<span class="left">Welcome, <%= userName %></span> 
+<a href="/profile/edit"><i class="material-icons">person</i></a>
 
 <ul class="tabs tabs-transparent center">
     <li class="tab"><a href="#collection">Collection</a></li>
