--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <div class="">
+    <div class="">
     <% if (apod.hdurl && apod.media_type === 'image') { %> 
         <img class="cover" src="<%= apod.hdurl %>" alt="astronomy picture of today" height="500">
     <% } else if (apod.url && apod.media_type === 'video') { %> 
@@ -6,26 +7,44 @@
     <% } else { %> 
         <img src="https://http.cat/204" alt="Cannot Find Content">
     <% } %> 
-    <div class="above center">
-        <span><%= apod.date %></span>
-        <span><%= apod.title %></span>
     </div>
-    
-    <form method="GET" action="/detail">
-        <input hidden type="date" id="date" name="date" value="<%= apod.date %>">
-        <button type="submit">See More Information</button>
-    </form>
-    <form method="POST" action="/profile">
-        <input hidden type="date" id="date" name="date" value="<%= apod.date %>">
-        <% if (apod.hdurl) { %>
-            <input hidden type="text" id="url" name="url" value="<%= apod.hdurl %>">
-        <% } else { %> 
-            <input hidden type="text" id="url" name="url" value="<%= apod.url %>">
-        <% } %> 
-        <button type="submit">Add to Favorite</button>
-    </form>
+    <div class="info right-align">
+        <h4><%= apod.date %></h4>
+        <h5><%= apod.title %></h5>
+        <div class="">    
+        <form method="POST" action="/profile">
+            <input hidden type="date" id="date" name="date" value="<%= apod.date %>">
+            <% if (apod.hdurl) { %>
+                <input hidden type="text" id="url" name="url" value="<%= apod.hdurl %>">
+            <% } else { %> 
+                <input hidden type="text" id="url" name="url" value="<%= apod.url %>">
+            <% } %> 
+            <button class="btn waves-effect waves-light red lighten-2" type="submit">Add to Favorite</button>
+        </form>        
+        <form method="GET" action="/detail">
+            <input hidden type="date" id="date" name="date" value="<%= apod.date %>">
+            <button class="btn waves-effect waves-light deep-orange lighten-2" type="submit">See More Information</button>
+        </form>
+        </div>
+    </div>
 </div>
 
+<div class="slider">
+    <ul class="slides">
+        <% gallery.forEach( g => { %>
+            <% if (g.url && g.media_type === 'image') { %> 
+                <li>
+                    <img src="<%= g.url %>" alt="<%= g.date %>">
+                    <div class="caption left-align">
+                        <h4><%= g.date %></h4>
+                        <h5 class="light grey-text text-lighten-3"><%= g.title %></h5>
+                    </div>
+                </li>
+            <% } %>
+        <% }) %>
+    </ul>
+</div>
+            
 <div class="row">
     <% gallery.forEach( g => { %>
         <div class="col l4 m6 s12">
