--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -67,6 +67,9 @@
             <!-- <img src="https://img.icons8.com/color/48/000000/nasa.png"/> -->
             Pictures requested from <a href="https://www.nasa.gov/">NASA</a> powered by <a href="https://apod.nasa.gov/apod/astropix.html">APOD API</a>
           </div>
+          <div>
+            Mars Pictures requested from <a href="https://www.nasa.gov/">NASA</a> powered by <a href="https://api.nasa.gov/">Mars Rover Photos API</a>
+          </div>
         </div>
         <div class="col m4 s12 center">
           <span>See Contributor At</span><br>
