--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -22,13 +22,18 @@
 
                 <p><%= f.date %></p>
 
-                <div class="flex-button">
-                    <a href="/detail?date=<%= f.date %>">
-                        <button class="profile-btn btn waves-effect deep-orange lighten-2">View</button>
-                    </a>
-                    <form method="POST" action="/profile/<%= f.id %>/?_method=DELETE"">
-                        <button class="profile-btn btn waves-effect grey darken-1" type="submit">Delete</button>
-                    </form>
+                <div class="row">
+                    <div class="col s6">
+                        <a href="/detail?date=<%= f.date %>">
+                            <button class="gallery-btn btn waves-effect deep-orange lighten-2">View</button>
+                        </a>
+                    </div>
+                    <div class="col s6">
+                        <form method="POST" action="/profile/<%= f.id %>/?_method=DELETE"">
+                            <button class="gallery-btn btn waves-effect grey darken-1" type="submit">Delete</button>
+                        </form>
+                    </div>
+                    
                 </div>
             </div>
         <% }) %> 
@@ -77,7 +82,9 @@
                 </div>
             <%}) %> 
         <% } else { %> 
-            <h5>You have no comments yet.</h5>
+            <div class="comment-item my-comment-item">
+                <h5>You have no comments yet.</h5>
+            </div>
         <% }%>
     </div>
 </div>
