--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -63,14 +63,18 @@
                 <p><i style="color: grey;">No comments yet. Leave a comment! >>>> </i></p>
             </div>
         <% } %> 
-
-        <div class="add-comment">
+ 
+        <div class="add-comment comment-item">
             <form method="POST" action="/detail?date=<%= apod.date %>#comment">
-                <div class="input-field">
-                    <label for="new-comment">Add a comment...</label>
-                    <input type="text" id="new-comment" name="comment" required>
-                </div>
-                <button class="comment-btn btn waves-effect waves-light brown lighten-4" type="submit">SUBMIT</button>
+                <div class="row">
+                    <div class="input-field col s9">
+                        <label for="new-comment">Add a comment...</label>
+                        <input type="text" id="new-comment" name="comment" required>
+                    </div>
+                    <div class="col s3">
+                        <button class="btn waves-effect waves-light blue-grey darken-1" type="submit">Add Comment</button>
+                    </div>
+                </div>                
             </form>
         </div>
     </div>
