--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,6 +1,6 @@
 <div class="auth-background">
 
-  <form class="registration" action="/auth/login" method="POST">
+  <form class="form-box" action="/auth/login" method="POST">
     <h4 class="center">Log In</h4>
 
     <div class="input-field">
