--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,6 +1,6 @@
 <div class="auth-background">
 
-  <form class="registration" action="/auth/signup" method="POST">
+  <form class="form-box" action="/auth/signup" method="POST">
 
     <h4 class="center">Sign Up</h4>
 
