--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,3 +82,9 @@
         </div>
     <% }) %> 
 </div>
+
+<div class="gallery-bottom">
+    <a href="/mars"><h5>Explore Mars Rover Photos</h5></a>
+    <a href="#top"><h5>Back To Top</h5></a>
+    <a href="/gallery"><h5>See More Photos in Gallery</h5></a>
+</div>
