--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,5 +1,5 @@
 <div class="search-background">
-    <div class="registration">
+    <div class="form-box">
         <form method="GET" action="/detail">
             <label for="date">Search any date after 1995-06-16</label>        
             <input type="date" name="date" id="date" min="1995-06-16" max="<%= date %> ">
