--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -60,11 +60,9 @@
       <div class="row">
         <div class="col m4 s12">
           <div>
-            <!-- <img src="https://img.icons8.com/color/48/000000/icons8-new-logo.png"/> -->
             Icons pack by <a href="https://icons8.com">Icons8</a>
           </div>
           <div>
-            <!-- <img src="https://img.icons8.com/color/48/000000/nasa.png"/> -->
             Pictures requested from <a href="https://www.nasa.gov/">NASA</a> powered by <a href="https://apod.nasa.gov/apod/astropix.html">APOD API</a>
           </div>
           <div>
@@ -90,21 +88,16 @@
     </footer>
 
 
-    <script src="/js/app.js"></script>
     <!-- Materialize JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
-        // var sideNavElems = document.querySelectorAll('.sidenav');
-        // var sideNavInstances = M.Sidenav.init(sideNavElems, {});
-        // var tabElems = document.querySelectorAll('.tabs');
-        // console.log('-----------------------');
-        // console.log(el);
-        // var tabInstance = M.Tabs.init(tabElems);        
         var elems = document.querySelectorAll('.slider');
         var instances = M.Slider.init(elems);
         M.AutoInit();
       });      
     </script>
+    <!-- JS Link -->
+    <script src="/js/app.js"></script>
   </body>
 </html>
