--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -36,7 +36,11 @@
     <% }) %>   
 </div>
 
- <div class="gallery-bottom">
-    <a href="#top"><h5>Back To Top</h5></a>
-    <a href="/gallery"><h5>Reload Gallery Photos</h5></a>
+ <div class="row text-shadow-light center">
+     <div class="col m6 s12">
+        <a href="#top"><h5>Back To Top</h5></a>
+     </div>
+     <div class="col m6 s12">
+        <a href="/gallery"><h5>Reload Gallery Photos</h5></a>
+     </div>
 </div>
