--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,8 +83,14 @@
     <% }) %> 
 </div>
 
-<div class="gallery-bottom">
-    <a href="/mars"><h5>Explore Mars Rover Photos</h5></a>
-    <a href="#top"><h5>Back To Top</h5></a>
-    <a href="/gallery"><h5>See More Photos in Gallery</h5></a>
+<div class="row text-shadow-light center">
+    <div class="col m4 s12">    
+        <a href="/mars"><h5>Explore Mars Rover Photos</h5></a>
+    </div>
+    <div class="col m4 s12">
+        <a href="#top"><h5>Back To Top</h5></a>
+    </div>
+    <div class="col m4 s12">
+        <a href="/gallery"><h5>See More Photos in Gallery</h5></a>
+    </div>
 </div>
