[index.ejs] Add text shadow in slide-show

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
             <% if (g.url && g.media_type === 'image') { %> 
                 <li>
                     <img src="<%= g.url %>" alt="<%= g.date %>">
-                    <div class="caption left-align">
+                    <div class="caption left-align text-shadow">
                         <h4><%= g.date %></h4>
                         <h5 class="light grey-text text-lighten-3"><%= g.title %></h5>
                     </div>
