[README] add 404 page to route

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,4 +1,4 @@
 <div>
     <img class="cover" src="https://i.imgur.com/hona3Zq.jpg" alt="black-hole" height="500">
-    <h3 class="center above">404 You Reach the BLACK HOLE, NOTHING HERE</h3>
+    <h3 class="center above text-shadow">404 You Reach the BLACK HOLE, NOTHING HERE</h3>
 </div>
