[CSS] Add hover effect to homepage button

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,6 +53,10 @@ footer {
   margin-bottom: 15px;
 }
 
+.info button:hover {
+  opacity: 1;
+}
+
 /* --------------Search & Auth & Edit Form-------------- */
 
 .form-box {
